<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgcolor"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonLaunch"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <ImageButton
            android:id="@+id/buttonUp"
            android:layout_width="@dimen/button_short"
            android:layout_height="@dimen/button_long"
            android:contentDescription="@string/arrow_up"
            android:scaleType="fitXY"
            android:src="@drawable/arrow_up" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" >

            <ImageButton
                android:id="@+id/buttonLeft"
                android:layout_width="@dimen/button_long"
                android:layout_height="@dimen/button_short"
                android:contentDescription="@string/arrow_left"
                android:scaleType="fitXY"
                android:src="@drawable/arrow_left" />

            <ImageButton
                android:id="@+id/buttomStop"
                android:layout_width="@dimen/button_short"
                android:layout_height="@dimen/button_short"
                android:layout_alignParentEnd="false"
                android:contentDescription="@string/stop"
                android:scaleType="fitXY"
                android:src="@drawable/dot" />

            <ImageButton
                android:id="@+id/buttonRight"
                android:layout_width="@dimen/button_long"
                android:layout_height="@dimen/button_short"
                android:contentDescription="@string/arrow_right"
                android:scaleType="fitXY"
                android:src="@drawable/arrow_right" />

        </LinearLayout>

        <ImageButton
            android:id="@+id/buttonDown"
            android:layout_width="@dimen/button_short"
            android:layout_height="@dimen/button_long"
            android:adjustViewBounds="true"
            android:contentDescription="@string/arrow_down"
            android:maxHeight="@dimen/button_long"
            android:maxWidth="@dimen/button_short"
            android:scaleType="fitXY"
            android:src="@drawable/arrow_down" />

    </LinearLayout>

    <Button
        android:id="@+id/buttonLaunch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/launch"
        android:textColor="@color/launch_color"
        android:textSize="@dimen/activity_vertical_margin"
        android:textStyle="bold" />

</RelativeLayout>